--- a/.github/workflows/repository_mirroring.yml
+++ b/.github/workflows/repository_mirroring.yml
@@ -12,6 +12,6 @@ jobs:
     - name: Mirror Repository
       uses: pixta-dev/repository-mirroring-action@v1
       with:
-        source_repo: "Fizo55/workflow_epitech"
-        destination_repo: "EpitechPromo2027/B-DOP-200-NAN-2-1-bschocolatine-erwann.tanguy"
-        destination_token: ${{ secrets.EPITECH_TOKEN }}
+        entryPoint: "Fizo55/workflow_epitech"
+        target_repo_url: "EpitechPromo2027/B-DOP-200-NAN-2-1-bschocolatine-erwann.tanguy"
+        ssh_private_key: ${{ secrets.EPITECH_TOKEN }}
