--- a/.github/workflows/repository_mirroring.yml
+++ b/.github/workflows/repository_mirroring.yml
@@ -14,6 +14,6 @@ jobs:
     - name: Mirror Repository
       uses: pixta-dev/repository-mirroring-action@v1
       with:
-        target_repo_url: "git@github.com:EpitechPromo2027/B-DOP-200-NAN-2-1-bschocolatine-erwann.tanguy.git"
+        target_repo_url: ${{ env.MIRROR_URL }}
         ssh_private_key: ${{ secrets.EPITECH_TOKEN }}
         ssh_username: "git"
