--- a/.github/workflows/repository_mirroring.yml
+++ b/.github/workflows/repository_mirroring.yml
@@ -14,6 +14,6 @@ jobs:
     - name: Mirror Repository
       uses: pixta-dev/repository-mirroring-action@v1
       with:
-        target_repo_url: ${{ env.MIRROR_URL }}
+        target_repo_url: ${{ repository.MIRROR_URL }}
         ssh_private_key: ${{ secrets.EPITECH_TOKEN }}
         ssh_username: "git"
