--- a/.github/workflows/coding_style.yml
+++ b/.github/workflows/coding_style.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v2
       - name: Check Coding Style
-        run: check.sh $(pwd) $(pwd)
+        run: check.sh . .
       - name: Display Errors
         if: failure()
         uses: actions/github-script@v3
