--- a/.github/workflows/coding_style.yml
+++ b/.github/workflows/coding_style.yml
@@ -14,6 +14,7 @@ jobs:
         working-directory: ${{ github.workspace }}
         run: check.sh . .
       - name: Check Coding Style Errors
+        working-directory: ${{ github.workspace }}
         run: |
           if [ -s coding-style-error.log ]; then
             echo "Coding style check failed"
