--- a/.github/workflows/coding_style.yml
+++ b/.github/workflows/coding_style.yml
@@ -18,7 +18,7 @@ jobs:
             exit $exit_code
           fi
         env:
-          GITHUB_TOKEN: ${{ secrets.EPITECH_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.PUBLIC_TOKEN }}
       - name: Parse and set error outputs
         if: always()
         id: parse-errors
